# test2text

./: .gitignore  CONTRIBUTING.md  README.md  convert_trace_annos.py  index_annotations.py  index_requirements.py  link_reqs_to_annos.py  main.py  pyproject.toml  report.py  visualize_vectors.py
.github/workflows/: test.yaml
.streamlit/: config.toml
pages/: 1_upload.py  2_inspect.py  report.py
pages/upload/: __init__.py  annotations.py  requirements.py
resources/: typography.css
services/db/: client.py
services/db/tables/: annotations.py  test_case.py
services/embeddings/: cache_distances.py  embed.py
services/loaders/: convert_trace_annos.py  index_annotations.py  index_requirements.py
services/visualisation/: visualize_vectors.py
test2text/db/: __init__.py  client.py
test2text/db/tables/: __init__.py  abstract_table.py  annos_to_reqs.py  annotations.py  case_annos_trace.py  case_to_annos.py  cases_to_annos.py  requirements.py  test_case.py
test2text/embeddings/: embed.py
test2text/pages/: documentation.py  report.py  report_by_tc.py
test2text/pages/controls/: controls_page.py
test2text/pages/reports/: report_by_req.py  report_by_tc.py
test2text/pages/upload/: annotations.py  requirements.py
test2text/services/db/: __init__.py  client.py  streamlit_conn.py
test2text/services/embeddings/: annotation_embeddings_controls.py  cache_distances.py
test2text/services/loaders/: convert_trace_annos.py  index_annotations.py  index_requirements.py
test2text/utils/: __init__.py  path.py  semver.py  sqlite_vec.py
tests/: test_db_client.py  test_embeddings.py  test_semver.py
tests/test_db/: test_db_client.py
(+27 files in other folders)
