[project]
name = "test2text"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Dorofeev - d0rich",email = "dorich2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers (>=4.50.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu118"}
