[project]
name = "test2text"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Dorofeev - d0rich",email = "dorich2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "sqlite-vec>=0.1.6",
    "tabbyset>=1.0.0"
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
]
production = [
    "einops>=0.8.1",
    "sentence-transformers>=4.0.1",
    "torch"
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
torch = {index = "pytorch-cpu"}

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
